--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <section class="header">
-      <h2 class="title">A dead simple, responsive boilerplate.</h2>
+      <h2 class="title">praxis101: practical actions for people, systems, and technology.</h2>
       <div class="value-props row">
         <div class="four columns value-prop">
           <img class="value-img" src="images/feather.svg">
@@ -64,7 +64,7 @@
         <ul class="navbar-list">
           <li class="navbar-item"><a class="navbar-link" href="#intro">Intro</a></li>
           <li class="navbar-item">
-            <a class="navbar-link" href="#" data-popover="#codeNavPopover">Code</a>
+            <a class="navbar-link" href="#" data-popover="#codeNavPopover">Blogs</a>
             <div id="codeNavPopover" class="popover">
               <ul class="popover-list">
                 <li class="popover-item">
@@ -97,7 +97,7 @@
               </ul>
             </div>
           </li>
-          <li class="navbar-item"><a class="navbar-link" href="#examples">Examples</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="#examples">Earlier work</a></li>
           <li class="navbar-item">
             <a class="navbar-link" href="#" data-popover="#moreNavPopover">More</a>
             <div id="moreNavPopover" class="popover">
