more title editing

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <section class="header">
-      <h2 class="title">praxis101: practical actions for people, systems, and technology.</h2>
+      <h2 class="title">praxis101: practical actions and ideas about people, systems, and technology.</h2>
     </section>
 
     <div class="navbar-spacer"></div>
