--- a/index.html
+++ b/index.html
@@ -41,7 +41,14 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <section class="header">
-      <h2 class="title">praxis101: practical actions and ideas about people, systems, and technology.</h2>
+      <h2 class="title">praxis101: practical actions and ideas about
+	people, systems, and technology.</h2>
+      <div class="value-props row">
+        <div class="five columns value-prop">
+          <img class="value-img" src="images/prehistory.png">
+          There is a story on every painted wall.
+        </div>
+      </div>
     </section>
 
     <div class="navbar-spacer"></div>
