renamed the image

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	people, systems, and technology.</h2>
       <div class="value-props row">
         <div class="five columns value-prop">
-          <img class="value-img" src="images/prehistory.png">
+          <img class="value-img" src="images/dreamfragment.png">
           There is a story on every painted wall.
         </div>
       </div>
