--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 	people, systems, and technology.</h2>
       <div class="value-props row">
         <div class="five columns value-prop">
-          <img class="value-img" src="images/dreamfragment.png">
-          There is a story on every painted wall.
+          <img class="value-img" src="images/dreamfragment2.png">
+          A dream fragment cribbed from Twitter.
         </div>
       </div>
     </section>
