--- a/index.html
+++ b/index.html
@@ -41,12 +41,11 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <section class="header">
-      <h2 class="title">praxis101: practical actions and ideas about
-	people, systems, and technology.</h2>
+      <h2 class="title">Praxis101: practical actions and ideas about people, systems, and technology.</h2>
       <div class="value-props row">
         <div class="five columns value-prop">
           <img class="value-img" src="images/dreamfragment2.png">
-          A dream fragment cribbed from Twitter.
+          A dream fragment copied from a Tweet.
         </div>
       </div>
     </section>
