adding links to the 'navbar-list'

--- a/index.html
+++ b/index.html
@@ -41,12 +41,9 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <section class="header">
-      <h2 class="title">Praxis101: practical actions and ideas about people, systems, and technology.</h2>
       <div class="value-props row">
-        <div class="five columns value-prop">
           <img class="value-img" src="images/dreamfragment2.png">
           A dream fragment copied from a Tweet.
-        </div>
       </div>
     </section>
 
@@ -56,7 +53,7 @@
         <ul class="navbar-list">
           <li class="navbar-item"><a class="navbar-link" href="#intro">Intro</a></li>
           <li class="navbar-item">
-            <a class="navbar-link" href="#" data-popover="#codeNavPopover">Blogs</a>
+            <a class="navbar-link" href="blogs/index.html">Blogs</a>
             <div id="codeNavPopover" class="popover">
               <ul class="popover-list">
                 <li class="popover-item">
