(1) learn a bit about buttons; (2) remove the 'one-half column' div

--- a/blogs/index.html
+++ b/blogs/index.html
@@ -40,10 +40,10 @@
   <div class="section hero">
     <div class="container">
       <div class="row">
-        <div class="one-half column">
+
           <h4 class="hero-heading">Blogs associated with Praxis101.</h4>
-          <a class="button button-primary" href="https://praxis101.com/praxisLab">Look at the laboratory</a>
-        </div>
+          <a class="button" href="https://praxis101.com/praxisLab">Look at the laboratory</a>
+
       </div>
     </div>
   </div>
