add in the title in a smaller font

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <section class="header">
+      <h5 class="title">Praxis101: practical actions and ideas about people and systems.</h5>
     </section>
 
     <div class="navbar-spacer"></div>
