--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Skeleton: Responsive CSS Boilerplate</title>
+  <title>Praxis101: present and past.</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -32,8 +32,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="dist/images/favicon.png">
-
+  <link rel="icon" type="image/ico" href="images/favicon.ico">
 </head>
 <body class="code-snippets-visible">
 
@@ -41,7 +40,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <section class="header">
-      <h5 class="title">Praxis101: practical actions and ideas about people and systems.</h5>
+      <h5 class="title">Praxis101: reflections on practice and practical action.</h5>
     </section>
 
     <div class="navbar-spacer"></div>
