--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
     <div class="value-props row">
       <img class="value-img" src="images/dreamfragment2.png">
-      A dream fragment copied from a Tweet.
+      A dream fragment posted in a Tweet.
      </div>
 
     <!-- Why use Skeleton -->
