--- a/index.html
+++ b/index.html
@@ -50,37 +50,6 @@
           <li class="navbar-item"><a class="navbar-link" href="#intro">Intro</a></li>
           <li class="navbar-item">
             <a class="navbar-link" href="blogs/index.html">Blogs</a>
-            <div id="codeNavPopover" class="popover">
-              <ul class="popover-list">
-                <li class="popover-item">
-                  <a class="popover-link" href="#grid">Grid</a>
-                </li>
-                <li class="popover-item">
-                  <a class="popover-link" href="#typography">Typography</a>
-                </li>
-                <li class="popover-item">
-                  <a class="popover-link" href="#buttons">Buttons</a>
-                </li>
-                <li class="popover-item">
-                  <a class="popover-link" href="#forms">Forms</a>
-                </li>
-                <li class="popover-item">
-                  <a class="popover-link" href="#lists">Lists</a>
-                </li>
-                <li class="popover-item">
-                  <a class="popover-link" href="#code">Code</a>
-                </li>
-                <li class="popover-item">
-                  <a class="popover-link" href="#tables">Tables</a>
-                </li>
-                <li class="popover-item">
-                  <a class="popover-link" href="#queries">Queries</a>
-                </li>
-                <li class="popover-item">
-                  <a class="popover-link" href="#utilities">Utilities</a>
-                </li>
-              </ul>
-            </div>
           </li>
           <li class="navbar-item"><a class="navbar-link" href="#examples">Earlier work</a></li>
           <li class="navbar-item">
@@ -113,8 +82,10 @@
     </nav>
 
     <div class="value-props row">
-      <img class="value-img" src="images/dreamfragment2.png">
-      A dream fragment posted in a Tweet.
+      <figure>
+      <img src="images/dreamfragment2.png">
+      <figcaption>A dream fragment posted in a Tweet.</figcaption>
+      </figure>
      </div>
 
     <!-- Why use Skeleton -->
