added imgcaption class to css to center image caption. not sure it is a great solution, but it works now

--- a/index.html
+++ b/index.html
@@ -82,10 +82,8 @@
     </nav>
 
     <div class="value-props row">
-      <figure>
-      <img src="images/dreamfragment2.png">
-      <figcaption>A dream fragment posted in a Tweet.</figcaption>
-      </figure>
+      <img class="value-img" src="images/dreamfragment2.png">
+      <p class="value-imgcaption">A dream fragment posted in a Tweet.</p>
      </div>
 
     <!-- Why use Skeleton -->
