starting on index file cleanup

--- a/index.html
+++ b/index.html
@@ -85,11 +85,15 @@
       <img class="value-img" src="images/dreamfragment2.png">
       <p class="value-imgcaption">A dream fragment posted in a Tweet.</p>
      </div>
+    <div class="value-props row">
+      <img class="value-img" src="images/rodantheSeashore200801M.jpg">
+      <p class="value-imgcaption">Cape Hatteras seashore, January 2008.</p>
+     </div>
 
     <!-- Why use Skeleton -->
     <div class="docs-section" id="intro">
-      <h6 class="docs-header">Is Skeleton for you?</h6>
-      <p>You should use Skeleton if you're embarking on a smaller project or just don't feel like you need all the utility of larger frameworks. Skeleton only styles a handful of standard HTML elements and includes a grid, but that's often more than enough to get started. In fact, <u>this site is built on Skeleton and has ~200 lines of custom CSS</u> (half of which is the docking navigation).</p>
+      <h6 class="docs-header">Colophon</h6>
+      <p><u>This site is built on Skeleton and has ~200 lines of custom CSS</u> (half of which is the docking navigation). Skeleton only styles a handful of standard HTML elements and includes a grid, but that's often more than enough to get started.</p>
     </div>
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
