small changes to primary & blog page

--- a/blogs/index.html
+++ b/blogs/index.html
@@ -42,17 +42,9 @@
       <div class="row">
 
           <h4 class="hero-heading">Blogs associated with Praxis101.</h4>
-          <a class="button" href="https://praxis101.com/praxisLab">Look at the laboratory</a>
+          <a class="button" href="https://praxis101.com/p5blog/p5blog-archives.html">The archive</a>
 
       </div>
-    </div>
-  </div>
-
-  <div class="section get-help">
-    <div class="container">
-      <h3 class="section-heading">Need help getting started?</h3>
-      <p class="section-description">Skeleton is an amazingly easy place to start with responsive development. If you want to learn more, just visit the documentation!</p>
-      <a class="button button-primary" href="http://getskeleton.com">View Skeleton Docs</a>
     </div>
   </div>
 
