--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
 
     <div class="value-props row">
       <img class="value-img" src="images/dreamfragment2.png">
-      <p class="value-imgcaption">A dream fragment posted in a Tweet.</p>
+      <p class="value-imgcaption">A dream fragment posted on Twitter, circa 2018.</p>
      </div>
     <div class="value-props row">
       <img class="value-img" src="images/rodantheSeashore200801M.jpg">
       <p class="value-imgcaption">Cape Hatteras seashore, January 2008.</p>
      </div>
 
-    <!-- Why use Skeleton -->
+    <!-- What was and is Praxis101 -->
     <div class="docs-section" id="intro">
       <h6 class="docs-header">Colophon</h6>
-      <p><u>This site is built on Skeleton and has ~200 lines of custom CSS</u> (half of which is the docking navigation). Skeleton only styles a handful of standard HTML elements and includes a grid, but that's often more than enough to get started.</p>
+      <p>This site is built on <a href="https://github.com/dhg/Skeleton">Skeleton</a>.</p>
     </div>
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
