settling on just one page?

--- a/blogs/index.html
+++ b/blogs/index.html
@@ -42,7 +42,9 @@
       <div class="row">
 
           <h4 class="hero-heading">Blogs associated with Praxis101.</h4>
-          <a class="button" href="https://praxis101.com/p5blog/p5blog-archives.html">The archive</a>
+          <a class="button"
+          href="https://praxis101.com/p5blog/p5blog-archives.html">Blog archive</a>
+	  <hr>
 
       </div>
     </div>
