--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         <ul class="navbar-list">
           <li class="navbar-item"><a class="navbar-link" href="#intro">Intro</a></li>
           <li class="navbar-item">
-            <a class="navbar-link" href="blogs/index.html">Blogs</a>
+            <a class="navbar-link" href="https://praxis101.com/p5blog/p5blog-archives.html">Blog archive</a>
           </li>
-          <li class="navbar-item"><a class="navbar-link" href="#examples">Earlier work</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="https://praxis101.com/">Earlier work</a></li>
           <li class="navbar-item">
             <a class="navbar-link" href="#" data-popover="#moreNavPopover">More</a>
             <div id="moreNavPopover" class="popover">
